[package]
name = "cephalopod"
version = "0.1.0"
authors = ["krcz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = { version = "1.13", features = ["serde-str"]}
